; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_tls13secretstest.c_ssl_cipher_get_evp.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_tls13secretstest.c_ssl_cipher_get_evp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ssl_cipher_get_evp(i32* %0, i32** %1, i32** %2, i32* %3, i64* %4, i32** %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32** %1, i32*** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i64* %4, i64** %12, align 8
  store i32** %5, i32*** %13, align 8
  store i32 %6, i32* %14, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
